# kongress

./: .craft.ini  .craftignore  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AndroidManifest.xml  CMakeLists.txt  README.md  changelog.md  org.kde.kongress.appdata.xml  org.kde.kongress.desktop  org.kde.kongress.json  org.kde.phone.kdefosdem.appdata.xml  org.kde.phone.kdefosdem.desktop  org.kde.phone.kdefosdem.json  snapcraft.yaml
.reuse/: dep5
android/: .craft.ini  AndroidManifest.xml  build.gradle
android/res/drawable-v24/: ic_launcher_background.xml
autotests/: CMakeLists.txt
kdefosdemac/: CMakeLists.txt  Messages.sh  calalarmclient.cpp  calalarmclient.h  kdefosdemac.notifyrc  kdefosdemacmain.cpp  org.kde.kdefosdemac.desktop  org.kde.kdefosdemac.xml
kongressac/: CMakeLists.txt  Messages.sh  alarmnotification.cpp  alarmnotification.h  alarmsmodel.cpp  alarmsmodel.h  calalarmclient.cpp  calalarmclient.h  kongressac.notifyrc  kongressacmain.cpp  notificationhandler.cpp  notificationhandler.h  org.kde.kongressac.desktop  org.kde.kongressac.service.in  org.kde.kongressac.xml  org.kde.wakeupmanager.PowerManagement.xml  solidwakeupbackend.cpp  solidwakeupbackend.h  wakeupbackend.h  wakeupmanager.cpp  wakeupmanager.h
po/ar/: kongress.po  kongressac.po
po/ast/: kongress.po  kongressac.po
po/ca/: kongress.po  kongressac.po
po/ca@valencia/: kongress.po  kongressac.po
po/cs/: kongress.po  kongressac.po
po/da/: kongress.po  kongressac.po
po/de/: kongress.po  kongressac.po
po/el/: kongress.po  kongressac.po
po/en_GB/: kongress.po  kongressac.po
po/eo/: kongress.po  kongressac.po
po/es/: kongress.po  kongressac.po
po/et/: kongress.po  kongressac.po
po/eu/: kongress.po  kongressac.po
po/fi/: kongress.po  kongressac.po
po/fr/: kongress.po  kongressac.po
po/ga/: kongress.po  kongressac.po
po/gl/: kongress.po  kongressac.po
po/he/: kongress.po  kongressac.po
po/hi/: kongress.po  kongressac.po
po/ia/: kongress.po  kongressac.po
po/it/: kongress.po  kongressac.po
po/ja/: kongress.po  kongressac.po
po/ka/: kongress.po  kongressac.po
po/ko/: kongress.po  kongressac.po
po/lt/: kongress.po  kongressac.po
po/lv/: kongress.po  kongressac.po
po/nl/: kongress.po  kongressac.po
po/nn/: kongress.po  kongressac.po
po/pa/: kongress.po  kongressac.po
po/pl/: kongress.po  kongressac.po
po/pt/: kongress.po  kongressac.po
po/pt_BR/: kongress.po  kongressac.po
po/ro/: kongressac.po
po/ru/: kongress.po  kongressac.po
po/sa/: akregator_konqplugin.po  autorefresh.po  babelfish.po  dirfilterplugin.po  fsview.po  imgalleryplugin.po  kcmbookmarks.po  kcmkonq.po  kcmkonqhtml.po  kcmperformance.po  kfmclient.po  kgetplugin.po  khtmlsettingsplugin.po  khtmltts.po  kio6_bookmarks.po  kongress.po  kongressac.po  konqueror.po  konquest.po  konsole.po  kontact.po  kontrast.po  konversation.po  kooka.po  kopeninghours.po  kshellcmdplugin.po  libkonq.po  libkookascan.po  searchbarplugin.po  uachangerplugin.po  webarchiver.po  webenginepart.po
po/sk/: kongress.po  kongressac.po
po/sl/: kongress.po  kongressac.po
po/sv/: kongress.po  kongressac.po
po/tr/: kongress.po  kongressac.po
po/ug/: kongress.po  kongressac.po
po/uk/: kongress.po  kongressac.po
po/x-test/: kongress.po  kongressac.po
po/zh_CN/: kongress.po  kongressac.po
po/zh_TW/: kongress.po  kongressac.po
res/drawable-v24/: ic_launcher_foreground.xml
src/: CMakeLists.txt  Messages.sh  alarmchecker.cpp  alarmchecker.h  calendarcontroller.cpp  calendarcontroller.h  conference.cpp  conference.h  conferencecontroller.cpp  conferencecontroller.h  conferencemodel.cpp  conferencemodel.h  eventcontroller.cpp  eventcontroller.h  eventmodel.cpp  eventmodel.h  incidencealarmsmodel.cpp  incidencealarmsmodel.h  kdefosdemconfig.cpp  kdefosdemconfig.h  localcalendar.cpp  localcalendar.h  main.cpp  resources.qrc  settingscontroller.cpp  settingscontroller.h
src/contents/data/: ConferenceData.js
src/contents/ui/: Conferences.qml  EventInfo.qml  EventsCardListView.qml  EventsListView.qml  EventsView.qml  FavoritesView.qml  GlobalDrawer.qml  IndoorMapView.qml  Main.qml  MapView.qml  ScheduleView.qml  SettingsView.qml
src/data/: ConferenceData.json
